# libxcom

./: CMakeLists.txt  README.md
include/: defines.h  devid.h  macro.h
libxcom/: CMakeLists.txt  data.h  dataitem.cpp  dataitem.h  operator.cpp  operator.h  opitem.cpp  opitem.h  tempbuf.cpp  tempbuf.h  template.cpp  template.h
test/: CMakeLists.txt  CMakelists.txt  basic_test.cpp
utils/: CMakeLists.txt  atomic.h  custom.cpp  custom.h  lock.h  lock_posix.cpp  logger.cpp  logger.h
